fixed responsive changes, alignment issues and remove inline css

--- a/static/calc/css/_financialModel.scss
+++ b/static/calc/css/_financialModel.scss
@@ -49,7 +49,11 @@
         #approval_rate,
         #avg_price_increase,
         #comb_avg_price_increase,
-        #fig_dropdown .Select-control {
+        #avg_price_change_perc,
+        #society_approval_rate_perc,
+        #filter_perc,
+        #fig_dropdown .Select-control,
+        #description {
             width: 100%;
             height: 36px;
         }
